--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Semáforo</title>
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.22/css/jquery.dataTables.css">
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/index.css">
 </head>
 <body>
@@ -21,44 +21,28 @@
     <div class="counter-wrap">
         <div class="counter">
             <span id="counter-number" class="disable">00</span>
-        </div>
-    </div>
-
-    <div class="stop-wrap">
-        <div class="smartphone">
-            <div class="volume-up-smartphone"></div>
-            <div class="volume-down-smartphone"></div>
-            <div class="power-smartphone"></div>
-            <div class="header-smartphone">
-                <div class="camera-smartphone"></div>
-                <div class="speaker-smartphone"></div>
-                <div class="led-smartphone"></div>
-            </div>
-            <div class="screen-smartphone">
-                <button class="push--skeuo" id="stopbtn"></button>
-            </div>
-            <div class="button-smartphone"></div>
+            <button class="btn btn-outline-dark" type="button" id="phonebtn">Telefono</button>
         </div>
     </div>
  
     <div class="table-wrap">
-        <table class="maintable table stripe dataTable"  id="maintable">
+        <table class="maintable table stripe dataTable table-success table-striped table-hover"  id="maintable">
             <thead>
                 <tr>
-                    <th>Pasos</th>
-                    <th>Ubication</th>
+                    <th>Steps</th>
+                    <th>Location</th>
                 </tr>
             </thead>
             <tbody></tbody>
         </table>
     </div>
 
-    <div class="data-wrap">
+    <div class="mt-5 pt-5">
         <div>
-            TOTAL METRO: <span id="tm"></span>
+            Total meters: <span id="tm"></span>
         </div>
         <div>
-            TOTAL PASOS: <span id="tp"></span>
+            Total Steps: <span id="tp"></span>
         </div>
     </div>
 
@@ -66,6 +50,7 @@
     <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.js"></script>
 
     <script src="/socket.io/socket.io.js"></script>
-      <script src="/js/main.js"></script>
+    <script src="/js/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
